--- a/AppTFG/app/src/main/res/values/strings.xml
+++ b/AppTFG/app/src/main/res/values/strings.xml
@@ -7,19 +7,19 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
+
     <string name="menu_dosimetro">Dosímetro</string>
     <string name="menu_mezclas">Cálculo de mezclas</string>
     <string name="menu_catalogo">Catálogo</string>
-    <string name="title_activity_login">LoginActivity</string>
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="welcome">"Welcome !"</string>
-    <string name="invalid_username">Not a valid username</string>
-    <string name="invalid_password">Password must be >5 characters</string>
-    <string name="login_failed">"Login failed"</string>
+    <string name="bienvenida">Bienvenid@ a CPMedical</string>
+    <string name="login_title">Iniciar sesión</string>
+    <string name="email_placeholder">Introduzca su email</string>
+    <string name="password_placeholder">Introduzca su contraseña</string>
+    <string name="continuar_bt">Continuar</string>
+    <string name="descripcion_personal_img">Imagen personal médico</string>
+    <string name="signin_title">Registrar usuario</string>
+    <string name="name_placeholder">Introduzca su nombre</string>
+    <string name="ap1_placeholder">Introduzca su primer apellido</string>
+    <string name="ap2_placeholder">Introduzca su segundo apellido</string>
+    <string name="siguiente_btn">Siguiente</string>
 </resources>
