FEAT: Se implementa lógica de login y signup

--- a/AppTFG/app/src/main/res/values/strings.xml
+++ b/AppTFG/app/src/main/res/values/strings.xml
@@ -17,9 +17,17 @@
     <string name="password_placeholder">Introduzca su contraseña</string>
     <string name="continuar_bt">Continuar</string>
     <string name="descripcion_personal_img">Imagen personal médico</string>
-    <string name="signin_title">Registrar usuario</string>
+    <string name="signup_title">Registrar usuario</string>
     <string name="name_placeholder">Introduzca su nombre</string>
     <string name="ap1_placeholder">Introduzca su primer apellido</string>
     <string name="ap2_placeholder">Introduzca su segundo apellido</string>
     <string name="siguiente_btn">Siguiente</string>
+    <string name="hospital_placeholder">Introduzca o seleccione su hospital</string>
+    <string name="signup">Registrarse</string>
+    <string name="login">Iniciar sesión</string>
+    <string name="o">o</string>
+    <string name="repetir_password_placeholder">Repita su contraseña</string>
+    <string name="hospital_title">Crear/Unirse a un hospital</string>
+    <string name="error_servidor">Se ha producido un error de conexión con el servidor</string>
+    <string name="registrar">Registrar</string>
 </resources>
