FEAT: se añaden recursos

--- a/AppTFG/app/src/main/res/values/strings.xml
+++ b/AppTFG/app/src/main/res/values/strings.xml
@@ -42,4 +42,6 @@
         <item>mg/día</item>
         <item>ug/día</item>
     </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
